--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Never forget a special date again. A thoughtful app to help you cherish every moment with your loved ones.">
     <meta property="og:image" content="./assets/preview.svg">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://giftmate-page.netlify.app">
+    <meta property="og:url" content="https://giftmate-dev.netlify.app">
     <meta property="og:site_name" content="GiftMate">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="GiftMate - A Gift From My Heart">
