docs: add meta tags and optimize resource loading in HTML pages
Add meta tags for SEO, social sharing, and theme color to improve discoverability and user experience. Optimize resource loading with preconnect, preload, and noscript fallbacks for better performance and compatibility.

--- a/pages/about.html
+++ b/pages/about.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="GiftMate - Never forget a special date again. A thoughtful app to help you cherish every moment with your loved ones.">
+    <meta name="theme-color" content="#FF6B8B">
     <title>About GiftMate - Your AI-Powered Gift Recommendation App</title>
+    <link rel="icon" href="../assets/favicon.svg" type="image/svg+xml">
+    <meta name="keywords" content="GiftMate, gift reminder, special dates, relationship app, love">
+    <meta name="author" content="GiftMate Team">
+    <meta property="og:title" content="About GiftMate - Your AI-Powered Gift Recommendation App">
+    <meta property="og:description" content="Never forget a special date again. A thoughtful app to help you cherish every moment with your loved ones.">
+    <meta property="og:image" content="../assets/preview.svg">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://giftmate-dev.netlify.app/about">
+    <meta property="og:site_name" content="GiftMate">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="About GiftMate - Your AI-Powered Gift Recommendation App">
+    <meta name="twitter:description" content="Never forget a special date again. A thoughtful app to help you cherish every moment with your loved ones.">
+    <meta name="twitter:image" content="../assets/preview.svg">
+    <link rel="canonical" href="https://giftmate-page.netlify.app/about">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+    <noscript>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    </noscript>
     <link rel="stylesheet" href="../assets/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link rel="preload" href="../assets/logo.svg" as="image" type="image/svg+xml">
+    <link rel="preload" href="../assets/preview.svg" as="image" type="image/svg+xml">
 </head>
 <body>
     <header role="banner">
