--- a/pages/terms.html
+++ b/pages/terms.html
@@ -3,7 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="GiftMate - Never forget a special date again. A thoughtful app to help you cherish every moment with your loved ones.">
+    <meta name="theme-color" content="#FF6B8B">
     <title>Terms and Policies - GiftMate</title>
+    <link rel="icon" href="../assets/favicon.svg" type="image/svg+xml">
+    <meta name="keywords" content="GiftMate, gift reminder, special dates, relationship app, love">
+    <meta name="author" content="GiftMate Team">
+    <meta property="og:title" content="Terms and Policies - GiftMate">
+    <meta property="og:description" content="Never forget a special date again. A thoughtful app to help you cherish every moment with your loved ones.">
+    <meta property="og:image" content="../assets/preview.svg">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://giftmate-dev.netlify.app/terms">
+    <meta property="og:site_name" content="GiftMate">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Terms and Policies - GiftMate">
+    <meta name="twitter:description" content="Never forget a special date again. A thoughtful app to help you cherish every moment with your loved ones.">
     <link rel="stylesheet" href="../assets/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
